taxgame - fixing SM-43 too much joker results cause cuts

--- a/src/app/tax-game/joker-tax/joker-tax.component.less
+++ b/src/app/tax-game/joker-tax/joker-tax.component.less
@@ -28,7 +28,6 @@
 .taxes {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     padding-bottom: 30px;
     margin: 15px auto 40px;
     overflow-x: auto;
@@ -47,6 +46,11 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: #c24448; 
+}
+
+.option-tax {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .option-tax-btn {
